--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1>Loading...</h1>
+<meta http-equiv = "refresh" content = "3; url = ./IT 360 - Procedural Building Gen" />
 
-<p>My first paragraph.</p>
 
 </body>
 </html>
