--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML>
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>kekayan's Resume</title>
+  <title>Shape Grammar</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
     <iframe src="https://docs.google.com/gview?url= https://github.com/JKJanosko/JKJanosko.github.io/blob/main/IT%20360%20-%20Procedural%20Building%20Gen.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
