--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Shape Grammar</title>
+  <title>Shape Grammar Presentation</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url= https://github.com/JKJanosko/JKJanosko.github.io/blob/main/IT%20360%20-%20Procedural%20Building%20Gen.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQtH8ZiCpLSI29TfWU3ycPJZHREfZPkzQpz5PD09yn4wgEiXUR4jaKisQoEvFqLr35PYU9ygoxMLa5y/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
   </body>
 </html>
