--- a/ywcc3076sa.html
+++ b/ywcc3076sa.html
@@ -7,6 +7,6 @@
   <body>
     <h1>Jozef Janosko</h1>
     <h2>YWCC 307 6SA Presentation</h2>
-    <h2 href="vizualizations.html">Visualizations Review</h2>
+    <h2>Visualizations Review</h2>
   </body>
 </html>
