--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
   <body>
     <h1>Jozef Janosko</h1>
-    <h2>YWCC 307 6SA Presentation</h2>
-    <h2 href="vizualizations.html">Visualizations Review</h2>
+    <a>YWCC 307 6SA Presentation</a>
+    <a href="./vizualizations.html">Visualizations Review</a>
   </body>
 </html>
