--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 </head>
   <body>
     <h1>Jozef Janosko</h1>
-    <a>YWCC 307 6SA Presentation</a>
-    <a href="./vizualizations.html">Visualizations Review</a>
+    <ol>
+        <li><a>YWCC 307 6SA Presentation</a></li>
+        <li><a href="./vizualizations.html">Visualizations Review</a></li>
+    </ol>
+   
+    
+    
   </body>
 </html>
