--- a/vizualizations.html
+++ b/vizualizations.html
@@ -2,9 +2,11 @@
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Presentations</title>
+  <title>Visualizations</title>
 </head>
   <body>
+    <h1>Visualization Presentation</h1>
     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRd9Y4ESZRrGxwOYylGv-hHvtsR9s0R78rtPClpoppR2FNCDdL8jsgKWEVpxP5FRxrBzi3NtN1AZfBj/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+    <a href="https://towardsdatascience.com/the-art-and-science-of-data-visualization-6f9d706d673e">The Art and Science of Data Visualization</a>
   </body>
 </html>
