--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Jozef Janosko</h1>
     <ol>
-        <li><a>YWCC 307 6SA Presentation</a></li>
+        <li><a href="./ywcc3076sa.html">YWCC 307 6SA Presentation</a></li>
         <li><a href="./vizualizations.html">Visualizations Review</a></li>
     </ol>
    
