--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ol>
         <li><a href="./ywcc3076sa.html">YWCC 307 6SA Presentation</a></li>
         <li><a href="./vizualizations.html">Visualizations Review</a></li>
+        <li><a href="./NavigationAndPathfinding6SA.html">Navigation And Pathfinding</a></li>
     </ol>
    
     
