--- a/redirect.html
+++ b/redirect.html
@@ -6,12 +6,12 @@
   
   //for Android
       if (/android/i.test(userAgent)) {
-          window.location.href = "http://www.link-for-android.com";
+          window.location.href = "https://play.google.com/store/apps/details?id=com.jjanosko.Juego_Juegos_App";
       }
   
   //For iPhone / iPad / iPod  (iOS
       if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
-          window.location.href = "http://www.link-for-iphone.com";
+          window.location.href = "https://apps.apple.com/us/app/juego-juegos/id6464535278?platform=iphone";
       }
   }
   </script>
