--- a/redirect.html
+++ b/redirect.html
@@ -24,6 +24,6 @@
     <meta property="og:image:height"        content="1024"/>
   </head>
   <body onload="redirectByMobileOS()">
-    
+    <h1>Redirect Page</h1>
   </body>
 <html>
