--- a/redirect.html
+++ b/redirect.html
@@ -23,7 +23,7 @@
     <meta property="og:image:width"        content="1024"/>
     <meta property="og:image:height"        content="1024"/>
   </head>
-  <body onload="redirectByMobileOS()">
+  <body onload="redirectToDeepLink()">
     <h1>Redirect Page</h1>
   </body>
 <html>
