--- a/redirect.html
+++ b/redirect.html
@@ -24,6 +24,6 @@
     <meta property="og:image:height"        content="1024"/>
   </head>
   <body onload="redirectToDeepLink()">
-    <h1>Redirect Page</h1>
+    <h1>Redirect Page V2</h1>
   </body>
 <html>
