--- a/redirect.html
+++ b/redirect.html
@@ -9,7 +9,8 @@
 
             // Redirect to the provided deep link
             if (deepLink) {
-                window.location.href = deepLink;
+                window.location.href = deepLink
+               window.close();
             }
         }
 
