--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <li><a href="./ywcc3076sa.html">YWCC 307 6SA Presentation</a></li>
         <li><a href="./vizualizations.html">Visualizations Review</a></li>
         <li><a href="./NavigationAndPathfinding6SA.html">Navigation And Pathfinding</a></li>
+        <li><a href="./HSA_admin_build/index.html">Navigation And Pathfinding</a></li>
     </ol>
    
     
