--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <body>
     <h1>Jozef Janosko</h1>
     <ol>
-        <li><a href="./ywcc3076sa.html">YWCC 307 6SA Presentation</a></li>
+        <!-- <li><a href="./ywcc3076sa.html">YWCC 307 6SA Presentation</a></li>
         <li><a href="./vizualizations.html">Visualizations Review</a></li>
-        <li><a href="./NavigationAndPathfinding6SA.html">Navigation And Pathfinding</a></li>
-        <li><a href="./HSA_admin_build/index.html">Navigation And Pathfinding</a></li>
+        <li><a href="./NavigationAndPathfinding6SA.html">Navigation And Pathfinding</a></li> -->
+        <li><a href="./admin_app">HSA Admin View</a></li>
+       <li><a href="./user_app">HSA User View</a></li>
     </ol>
    
     
