--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <!-- <li><a href="./ywcc3076sa.html">YWCC 307 6SA Presentation</a></li>
         <li><a href="./vizualizations.html">Visualizations Review</a></li>
         <li><a href="./NavigationAndPathfinding6SA.html">Navigation And Pathfinding</a></li> -->
-        <li><a href="./admin_app">HSA Admin View</a></li>
-       <li><a href="./user_app">HSA User View</a></li>
+        <li><a href="./admin_app/build">HSA Admin View</a></li>
+       <li><a href="./user_app/build">HSA User View</a></li>
     </ol>
    
     
