--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <li><a href="./vizualizations.html">Visualizations Review</a></li>
         <li><a href="./NavigationAndPathfinding6SA.html">Navigation And Pathfinding</a></li> -->
         <li><a href="./admin_app/build">HSA Admin View</a></li>
-       <li><a href="./user_app/build">HSA User View</a></li>
+       <li><a href="./user_app">HSA User View</a></li>
     </ol>
    
     
