--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li><a href="./NavigationAndPathfinding6SA.html">Navigation And Pathfinding</a></li> -->
         <li><a href="./admin_app">HSA Admin View</a></li>
        <li><a href="./user_app">HSA User View</a></li>
-       <li><a href="./portf>Under Construction</a></li>
+       <li><a href="./portf">Under Construction</a></li>
     </ol>
    
     
